; ModuleID = '/home/carl/AnghaBench/redis/src/extr_evict.c_estimateObjectIdleTime.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_evict.c_estimateObjectIdleTime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@LRU_CLOCK_RESOLUTION = common dso_local global i64 0, align 8
@LRU_CLOCK_MAX = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @estimateObjectIdleTime(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %5 = call i64 (...) @LRU_CLOCK()
  store i64 %5, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp uge i64 %6, %9
  br i1 %10, label %11, label %19

11:                                               ; preds = %1
  %12 = load i64, i64* %4, align 8
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = sub i64 %12, %15
  %17 = load i64, i64* @LRU_CLOCK_RESOLUTION, align 8
  %18 = mul i64 %16, %17
  store i64 %18, i64* %2, align 8
  br label %29

19:                                               ; preds = %1
  %20 = load i64, i64* %4, align 8
  %21 = load i64, i64* @LRU_CLOCK_MAX, align 8
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = sub i64 %21, %24
  %26 = add i64 %20, %25
  %27 = load i64, i64* @LRU_CLOCK_RESOLUTION, align 8
  %28 = mul i64 %26, %27
  store i64 %28, i64* %2, align 8
  br label %29

29:                                               ; preds = %19, %11
  %30 = load i64, i64* %2, align 8
  ret i64 %30
}

declare dso_local i64 @LRU_CLOCK(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
